fix gap e estrategia layout

--- a/css/mk.css
+++ b/css/mk.css
@@ -1903,6 +1903,10 @@ thead td:hover .mkhmHeadIco {
 		flex-direction: column;
 	}
 
+	.iSemGap {
+		flex-direction: column;
+	}
+
 	.iComGap {
 		flex-direction: column;
 	}
